--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -11,7 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: georgia, serif;
+  font-family: sans-serif, georgia, serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
@@ -584,6 +584,9 @@ pre tt:before,
 pre tt:after {
   content: "";
 }
+
+
+
 @media only screen and (max-width: 480px) {
   html {
     font-size: 100%;
