--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,17 +1,18 @@
-
 html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   font: 112.5%/1.45em georgia, serif, sans-serif;
   box-sizing: border-box;
   overflow-y: scroll;
+  font-family: "Poppins", sans-serif;
 }
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: sans-serif, georgia, serif;
+  /* font-family: sans-serif, georgia, serif; */
+  font-family: "Poppins", sans-serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
@@ -82,8 +83,8 @@ h1 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
@@ -391,7 +392,7 @@ dd {
   margin-bottom: 1.45rem;
 }
 p {
-  margin:0;
+  margin: 0;
 }
 pre {
   margin-left: 0;
@@ -584,8 +585,6 @@ pre tt:before,
 pre tt:after {
   content: "";
 }
-
-
 
 @media only screen and (max-width: 480px) {
   html {
